<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kadconia</string>
    
    <string name="action_settings">Einstellungen</string>
    <string name="action_refresh">Aktualisieren</string>

    <string name="pref_language">Sprache</string>
    <string name="pref_language_key">language</string>
    <string name="pref_language_summary">Sprache einstellen</string>
    <string name="pref_language_default">de-DE</string>
    <string name="pref_wifi_only">Nur Wifi</string>
    <string name="pref_wifi_only_key">wifi_only</string>
    <string name="pref_wifi_only_summary">Aktualisierung nur über Wifi</string>
    <string name="pref_vote_name">Minecraft-Name</string>
    <string name="pref_vote_name_key">vote_name</string>
    <string name="pref_vote_name_summary">Minecraft-Name zum Voten</string>
    <string name="pref_vote_name_default"></string>
    <string name="pref_konto_token">Konto-Token</string>
    <string name="pref_konto_token_key">konto_token</string>
    <string name="pref_konto_token_summary">Konto-Token zum Anzeigen der Kontoauszüge</string>
    <string name="pref_konto_token_default"></string>
    <string name="pref_player_list_key">player_list_1</string>
    <string name="pref_konto_page">CurrentPage</string>
    <string name="pref_konto_date">KontoDate</string>

    <string name="error_no_internet">Keine Internetverbindung</string>

    <string name="vote_text_captcha">Captcha:</string>
    <string name="vote_text_name">Minecraft-Name:</string>
    <string name="vote_button_submit">Bewerten</string>
    <string name="vote_text_hint_default">Tipp: Deinen Namen kannst du in den Einstellungen ändern!</string>

    <string name="bundle_key_kontoeintrag">Kontoeintrag</string>
    <string name="bundle_key_serverstatus_owner">Owner</string>
    
    <string name="title_activity_navigation">Kadconia</string>

    <string name="drawer_open">Menü öffnen</string>
    <string name="drawer_close">Menü schließen</string>
    
    <string name="link_list_element_icon">Link-Icon</string>

    <string name="nav_serverstatus">Serverstatus</string>
    <string name="nav_vote">Vote</string>
    <string name="nav_konto">Konto</string>
    <string name="nav_player_online">Wer ist online?</string>
    <string name="nav_infos">Info</string>
    <string name="nav_links">Links</string>
    <string name="nav_settings">Einstellungen</string>

    <string name="serverstatus_owner_kadcon">Kadcon</string>
    <string name="serverstatus_owner_mojang">Mojang</string>
    
    <string-array name="nav_array">
        <item>@string/nav_serverstatus</item>
    	<item>@string/nav_vote</item>
    	<item>@string/nav_konto</item>
    	<item>@string/nav_infos</item>
    	<item>@string/nav_links</item>
    	<item>@string/nav_settings</item>
    </string-array>

    <string-array name="nav_elements_serverstatus">
        <item>@string/serverstatus_owner_kadcon</item>
        <item>@string/serverstatus_owner_mojang</item>
    </string-array>

    <string-array name="player_server_url">
        <item>http://map.kadcon.de</item>
        <item>http://map2.kadcon.de</item>
        <item>http://map3.kadcon.de</item>
    </string-array>

    <string-array name="kontakt">
        <item>Mark Atzmüller</item>
        <item>kadconia@gmx.de</item>
    </string-array>

    <string-array name="language">
        <item>German (Germany)</item>
        <item>English (US)</item>
    </string-array>

    <string-array name="language_alias">
        <item>de-DE</item>
        <item>en-US</item>
    </string-array>

    <color name="dark_grey">#555555</color>
    <color name="nav_action_bar">#ff333333</color>
    <color name="nav_group">#ff3a3a3c</color>
    <color name="nav_element">#ff58585a</color>
    <color name="nav_divider_group">#ff454547</color>
    <color name="nav_divider_child">#ff626365</color>
    
</resources>
